@startuml

title Diagramme de classe du package modele

package modele {

    class Player {
        - currentBoatIndex : int
        - hasChoosedBoat : boolean
        - strategie : Strategie
        + shoot(pos : Point2D)
        + receiveShoot(pos: Point2D, damage : int) : boolean
        + chooseBoat(pos : Point2D) : boolean
        + getBoatIndexFromPos(pos : Point2D) : int
        + getCurrentBoat() : Bateau
        + addFailedShoot(pos : Point2D)
        + getStrategie() : Strategie
        + setStrategie(strategie : Strategie)
    }
    Player --"*" boatFactory.Bateau
    Player -- "*" Point2D : "Tirs échoués"
    Player -- "0..1" Strategie
    Player ..> Serializable

    class BatailleNavale {
        - width : int
        - height : int
        - turnPlayer : boolean
        - epoque : int
        + playerShoot(pos : Point2D)
        + {static} loadFromFile(filename : String) : BatailleNavale
        + saveToFile(filename : String)
    }
    
    Interface Strategie {
        + generateShoot() : Point2D
    }
    
    class strategieAlea{
        - lastShootHasTouched : boolean
        + generateShoot() : Point2D
    }
    
    class strategieCroix{
        - lastShootHasTouched : boolean
        + generateShoot() : Point2D
    }
    
    
    strategieAlea ..> Strategie
    strategieCroix ..> Strategie
    BatailleNavale --"1" Player : "Humain"
    BatailleNavale --"1" Player : "IA"
    BatailleNavale ..> Serializable
}


@enduml